// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerEnquiry Form reducer test cases should handle CHANGE_PROJECT_STATUS_STATE  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "businessUnitId": "",
    "cdmNotifiable": false,
    "cnNumber": "",
    "comment": "",
    "companyId": "",
    "contractTypeId": "",
    "contractorId": "",
    "countryId": 0,
    "currencyId": 0,
    "divisionId": "",
    "engagementId": undefined,
    "firstAssetWorkedOn": undefined,
    "headOfProject": "",
    "name": "",
    "otherBusinessUnit": "",
    "otherCompanyName": "",
    "otherContractName": "",
    "otherDivision": "",
    "otherEngagementType": "",
    "otherFirstAssetWorkedOn": "",
    "otherSecondAssetWorkedOn": "",
    "otherThirdAssetWorkedOn": "",
    "pmHasExperience": false,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": undefined,
    "soldMargin": undefined,
    "status": Object {
      "enquiryOverview": Object {
        "cnNumber": "",
        "contractorId": "",
        "headOfProject": "",
        "otherContractName": "",
        "projectManager": "",
        "projectName": "",
        "scope": "",
      },
      "enquiryOverviewError": null,
      "error": null,
      "event": 3,
      "form": Object {
        "approxValue": "",
        "businessUnitId": "",
        "cdmNotifiable": false,
        "cnNumber": "",
        "comment": "",
        "companyId": "",
        "contractTypeId": "",
        "contractorId": "",
        "countryId": 0,
        "currencyId": 0,
        "divisionId": "",
        "engagementId": undefined,
        "firstAssetWorkedOn": undefined,
        "headOfProject": "",
        "name": "",
        "otherBusinessUnit": "",
        "otherCompanyName": "",
        "otherContractName": "",
        "otherDivision": "",
        "otherEngagementType": "",
        "otherFirstAssetWorkedOn": "",
        "otherSecondAssetWorkedOn": "",
        "otherThirdAssetWorkedOn": "",
        "pmHasExperience": false,
        "probabilityOfWinning": "",
        "projectId": "",
        "projectManager": "",
        "projectOwner": "",
        "scope": "",
        "secondAssetWorkedOn": undefined,
        "soldMargin": undefined,
        "status": 1,
        "thirdAssetWorkedOn": undefined,
        "weightedTCV": undefined,
      },
      "loading": false,
      "notify": 0,
    },
    "thirdAssetWorkedOn": undefined,
    "weightedTCV": undefined,
  },
  "loading": false,
  "notify": 0,
}
`;

exports[`CustomerEnquiry Form reducer test cases should handle GET_ENQUIRY_OVERVIEW_ERROR  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": undefined,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "businessUnitId": "",
    "cdmNotifiable": false,
    "cnNumber": "",
    "comment": "",
    "companyId": "",
    "contractTypeId": "",
    "contractorId": "",
    "countryId": 0,
    "currencyId": 0,
    "divisionId": "",
    "engagementId": undefined,
    "firstAssetWorkedOn": undefined,
    "headOfProject": "",
    "name": "",
    "otherBusinessUnit": "",
    "otherCompanyName": "",
    "otherContractName": "",
    "otherDivision": "",
    "otherEngagementType": "",
    "otherFirstAssetWorkedOn": "",
    "otherSecondAssetWorkedOn": "",
    "otherThirdAssetWorkedOn": "",
    "pmHasExperience": false,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": undefined,
    "soldMargin": undefined,
    "status": 1,
    "thirdAssetWorkedOn": undefined,
    "weightedTCV": undefined,
  },
  "loading": false,
  "notify": 0,
}
`;

exports[`CustomerEnquiry Form reducer test cases should handle GET_PROJECT_DETAIL_SUCCESS  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "enquiryOverview": Object {
      "cnNumber": "",
      "contractorId": "",
      "headOfProject": "",
      "otherContractName": "",
      "projectManager": "",
      "projectName": "",
      "scope": "",
    },
    "enquiryOverviewError": null,
    "error": null,
    "event": 3,
    "form": Object {
      "approxValue": "",
      "businessUnitId": "",
      "cdmNotifiable": false,
      "cnNumber": "",
      "comment": "",
      "companyId": "",
      "contractTypeId": "",
      "contractorId": "",
      "countryId": 0,
      "currencyId": 0,
      "divisionId": "",
      "engagementId": undefined,
      "firstAssetWorkedOn": undefined,
      "headOfProject": "",
      "name": "",
      "otherBusinessUnit": "",
      "otherCompanyName": "",
      "otherContractName": "",
      "otherDivision": "",
      "otherEngagementType": "",
      "otherFirstAssetWorkedOn": "",
      "otherSecondAssetWorkedOn": "",
      "otherThirdAssetWorkedOn": "",
      "pmHasExperience": false,
      "probabilityOfWinning": "",
      "projectId": "",
      "projectManager": "",
      "projectOwner": "",
      "scope": "",
      "secondAssetWorkedOn": undefined,
      "soldMargin": undefined,
      "status": 1,
      "thirdAssetWorkedOn": undefined,
      "weightedTCV": undefined,
    },
    "loading": false,
    "notify": 0,
  },
  "loading": false,
  "notify": 0,
}
`;

exports[`CustomerEnquiry Form reducer test cases should handle PROJECT_ADD_ERROR  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": undefined,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "businessUnitId": "",
    "cdmNotifiable": false,
    "cnNumber": "",
    "comment": "",
    "companyId": "",
    "contractTypeId": "",
    "contractorId": "",
    "countryId": 0,
    "currencyId": 0,
    "divisionId": "",
    "engagementId": undefined,
    "firstAssetWorkedOn": undefined,
    "headOfProject": "",
    "name": "",
    "otherBusinessUnit": "",
    "otherCompanyName": "",
    "otherContractName": "",
    "otherDivision": "",
    "otherEngagementType": "",
    "otherFirstAssetWorkedOn": "",
    "otherSecondAssetWorkedOn": "",
    "otherThirdAssetWorkedOn": "",
    "pmHasExperience": false,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": undefined,
    "soldMargin": undefined,
    "status": 1,
    "thirdAssetWorkedOn": undefined,
    "weightedTCV": undefined,
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`CustomerEnquiry Form reducer test cases should handle RESET_CUSTOMER_ENQUIRY_STATE  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "businessUnitId": "",
    "cdmNotifiable": false,
    "cnNumber": "",
    "comment": "",
    "companyId": "",
    "contractTypeId": "",
    "contractorId": "",
    "countryId": 0,
    "currencyId": 0,
    "divisionId": "",
    "engagementId": undefined,
    "firstAssetWorkedOn": undefined,
    "headOfProject": "",
    "name": "",
    "otherBusinessUnit": "",
    "otherCompanyName": "",
    "otherContractName": "",
    "otherDivision": "",
    "otherEngagementType": "",
    "otherFirstAssetWorkedOn": "",
    "otherSecondAssetWorkedOn": "",
    "otherThirdAssetWorkedOn": "",
    "pmHasExperience": false,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": undefined,
    "soldMargin": undefined,
    "status": 1,
    "thirdAssetWorkedOn": undefined,
    "weightedTCV": undefined,
  },
  "loading": false,
  "notify": 0,
}
`;

exports[`CustomerEnquiry Form reducer test cases should handle RESET_PROJECT_DETAIL_STATE  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "businessUnitId": "",
    "cdmNotifiable": false,
    "cnNumber": "",
    "comment": "",
    "companyId": "",
    "contractTypeId": "",
    "contractorId": "",
    "countryId": 0,
    "currencyId": 0,
    "divisionId": "",
    "engagementId": undefined,
    "firstAssetWorkedOn": undefined,
    "headOfProject": "",
    "name": "",
    "otherBusinessUnit": "",
    "otherCompanyName": "",
    "otherContractName": "",
    "otherDivision": "",
    "otherEngagementType": "",
    "otherFirstAssetWorkedOn": "",
    "otherSecondAssetWorkedOn": "",
    "otherThirdAssetWorkedOn": "",
    "pmHasExperience": false,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": undefined,
    "soldMargin": undefined,
    "status": 1,
    "thirdAssetWorkedOn": undefined,
    "weightedTCV": undefined,
  },
  "loading": false,
  "notify": 0,
}
`;

exports[`CustomerEnquiry Form reducer test cases should handle RESET_PROJECT_DETAIL_STATE_TO_INITIAL  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "businessUnitId": "",
    "cdmNotifiable": false,
    "cnNumber": "",
    "comment": "",
    "companyId": "",
    "contractTypeId": "",
    "contractorId": "",
    "countryId": 0,
    "currencyId": 0,
    "divisionId": "",
    "engagementId": undefined,
    "firstAssetWorkedOn": undefined,
    "headOfProject": "",
    "name": "",
    "otherBusinessUnit": "",
    "otherCompanyName": "",
    "otherContractName": "",
    "otherDivision": "",
    "otherEngagementType": "",
    "otherFirstAssetWorkedOn": "",
    "otherSecondAssetWorkedOn": "",
    "otherThirdAssetWorkedOn": "",
    "pmHasExperience": false,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": undefined,
    "soldMargin": undefined,
    "status": 1,
    "thirdAssetWorkedOn": undefined,
    "weightedTCV": undefined,
  },
  "loading": false,
  "notify": 0,
}
`;

exports[`CustomerEnquiry Form reducer test cases should handle SET_PROJECT_ID_STATE  1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": "",
    "contractorId": "",
    "headOfProject": "",
    "otherContractName": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "businessUnitId": "",
    "cdmNotifiable": false,
    "cnNumber": "",
    "comment": "",
    "companyId": "",
    "contractTypeId": "",
    "contractorId": "",
    "countryId": 0,
    "currencyId": 0,
    "divisionId": "",
    "engagementId": undefined,
    "firstAssetWorkedOn": undefined,
    "headOfProject": "",
    "name": "",
    "otherBusinessUnit": "",
    "otherCompanyName": "",
    "otherContractName": "",
    "otherDivision": "",
    "otherEngagementType": "",
    "otherFirstAssetWorkedOn": "",
    "otherSecondAssetWorkedOn": "",
    "otherThirdAssetWorkedOn": "",
    "pmHasExperience": false,
    "probabilityOfWinning": "",
    "projectId": undefined,
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": undefined,
    "soldMargin": undefined,
    "status": 1,
    "thirdAssetWorkedOn": undefined,
    "weightedTCV": undefined,
  },
  "loading": false,
  "notify": 0,
}
`;
